--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@ body {
   max-width: 700px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 2%;
+  padding-right: 2%;
   font-size: 15px;
   font-family: Helvetica;
 }
