consolidated css into one stylesheet + usage of classes to reduce redundancy

--- a/index.html
+++ b/index.html
@@ -1,36 +1,23 @@
 <!DOCTYPE html>
 <html>
-<style>
-body {
-  background-color: black;
-  color: white;
-  max-width: 700px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 2%;
-  padding-right: 2%;
-  font-size: 15px;
-  font-family: Helvetica;
-}
-</style>
 <title>Homepage</title>
-<body>
+<link href="style.css" rel="stylesheet" type="text/css" />
 
-<nav>
-<ul style="background-color: white; list-style-type: none;">
-<li style="display: inline; padding-right: 25px;"><a href="index.html">Home</a></li>
-<li style="display: inline; padding-right: 25px;"><a href="vc-faq.html">VC General Speedrun FAQ</a></li>
-<li style="display: inline; padding-right: 25px;"><a href="vc-faq-100.html">VC 100% Speedrun FAQ</a></li>
-<li style="display: inline; padding-right: 25px;"><a href="snow-tl.html">SNOW Translation Project</a></li>
+<nav><ul class="navlist">
+<li class="navitem"><a href="index.html">Home</a></li>
+<li class="navitem"><a href="vc-faq.html">VC General Speedrun FAQ</a></li>
+<li class="navitem"><a href="vc-faq-100.html">VC 100% Speedrun FAQ</a></li>
+<li class="navitem"><a href="snow-tl.html">SNOW Translation Project</a></li>
 </ul></nav>
 
+<body>
 <p>Yo, I'm some nerd from the Baltimore/DC 'burbs (though I'd rather be in Philly). I speedrun GTA Vice City and translate stuff Japanese-English. And also some other miscellanous nerdy things.<br>
 I'm probably gonna continue building this site up to become my own hub of sorts.</p>
 <nav>
-<ul style="list-style-type: none;">
-<li><a target="_blank" href="https://twitch.tv/mhmd_fvc" style="color: #A8DFFF">Twitch</a></li>
-<li><a target="_blank" href="https://youtube.com/107989055567" style="color: #A8DFFF">YouTube</a></li>
-<li><a target="_blank" href="https://twitter.com/srlmhmd" style="color: #A8DFFF">Twitter</a></li>
+<ul class="navlist">
+<li class="navitem"><a target="_blank" href="https://twitch.tv/mhmd_fvc">Twitch</a></li>
+<li class="navitem"><a target="_blank" href="https://youtube.com/107989055567">YouTube</a></li>
+<li class="navitem"><a target="_blank" href="https://twitter.com/srlmhmd">Twitter</a></li>
 </ul></nav>
 </body>
 </html>
