--- a/snow-tl.html
+++ b/snow-tl.html
@@ -1,35 +1,20 @@
 <html>
-<style>
-body {
-  background-color: black;
-  color: white;
-  max-width: 700px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 2%;
-  padding-right: 2%;
-  font-size: 15px;
-  font-family: Helvetica;
-}
-</style>
-
 <title>SNOW Translation Project</title>
+<link href="style.css" rel="stylesheet" type="text/css" />
 
-<body>
-
-<nav>
-<ul style="background-color: white; list-style-type: none;">
-<li style="display: inline; padding-right: 25px;"><a href="index.html">Home</a></li>
-<li style="display: inline; padding-right: 25px;"><a href="vc-faq.html">VC General Speedrun FAQ</a></li>
-<li style="display: inline; padding-right: 25px;"><a href="vc-faq-100.html">VC 100% Speedrun FAQ</a></li>
-<li style="display: inline; padding-right: 25px;"><a href="snow-tl.html">SNOW Translation Project</a></li>
+<nav><ul class="navlist">
+<li class="navitem"><a href="index.html">Home</a></li>
+<li class="navitem"><a href="vc-faq.html">VC General Speedrun FAQ</a></li>
+<li class="navitem"><a href="vc-faq-100.html">VC 100% Speedrun FAQ</a></li>
+<li class="navitem"><a href="snow-tl.html">SNOW Translation Project</a></li>
 </ul></nav>
 
+<body>
 <h1>SNOW Translation Project</h1>
 <a target="_blank" href="https://vndb.org/v893"><img src="https://s2.vndb.org/sf/52/27752.jpg" width="400px" height="300px"></a>
-<h2><a href="SNOWPE_en_sumino_asahi.7z" style="color: #A8DFFF">DOWNLOAD CURRENT PATCH</a></h2>
-<h2><a href="magnet:?xt=urn:btih:03831cacc64eca39c991d13183ce3109c31aa276&dn=SNOW%20-Plus%20Edition-" style="color: #A8DFFF">DOWNLOAD SNOW PE</a></h2>
-<h2><a target="_blank" href="https://twitter.com/snowyryujintl" style="color: #A8DFFF">TWITTER</a></h2>
+<h2><a href="SNOWPE_en_sumino_asahi.7z">DOWNLOAD CURRENT PATCH</a></h2>
+<h2><a href="magnet:?xt=urn:btih:03831cacc64eca39c991d13183ce3109c31aa276&dn=SNOW%20-Plus%20Edition-">DOWNLOAD SNOW PE</a></h2>
+<h2><a target="_blank" href="https://twitter.com/snowyryujintl">TWITTER</a></h2>
 <p>SNOW is a visual novel released in 2004, with various editions released afterwards. It was developed by Studio Mebius, which I'm not even sure still exists (more than just legally, anyhow).
 This project is based on the "Plus Edition" (PE) released in 2006, supporting a whopping 800x600 resolution and with two new routes introduced in the various console releases.<br><br>
 There is another version of SNOW named the "Standard Edition" which is PE plus additional fandisc content, with quite horrifying contents in my opinion.
