--- a/vc-faq-100.html
+++ b/vc-faq-100.html
@@ -1,30 +1,15 @@
 <html>
-<style>
-body {
-  background-color: black;
-  color: white;
-  max-width: 700px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 2%;
-  padding-right: 2%;
-  font-size: 15px;
-  font-family: Helvetica;
-}
-</style>
-
 <title>Vice City 100% Speedrun FAQ</title>
+<link href="style.css" rel="stylesheet" type="text/css" />
 
-<body>
-
-<nav>
-<ul style="background-color: white; list-style-type: none;">
-<li style="display: inline; padding-right: 25px;"><a href="index.html">Home</a></li>
-<li style="display: inline; padding-right: 25px;"><a href="vc-faq.html">VC General Speedrun FAQ</a></li>
-<li style="display: inline; padding-right: 25px;"><a href="vc-faq-100.html">VC 100% Speedrun FAQ</a></li>
-<li style="display: inline; padding-right: 25px;"><a href="snow-tl.html">SNOW Translation Project</a></li>
+<nav><ul class="navlist">
+<li class="navitem"><a href="index.html">Home</a></li>
+<li class="navitem"><a href="vc-faq.html">VC General Speedrun FAQ</a></li>
+<li class="navitem"><a href="vc-faq-100.html">VC 100% Speedrun FAQ</a></li>
+<li class="navitem"><a href="snow-tl.html">SNOW Translation Project</a></li>
 </ul></nav>
 
+<body>
 <h1>Vice City 100% Speedrun FAQ</h1>
 <b>(You may need to refer to the General FAQ if you are unfamiliar with Vice City speedruns.)</b><br><br>
 
@@ -50,7 +35,7 @@ Also, since it is dependent on NPC spawns, the street pedestrian/gang spawns are
 <p>A: This involves starting the Trial by Dirt off-road mission many times with rampages, and then starting Vigilante or Taxi Driver.
 <ul>
   <li>For Vigilante, <b>starting it after duping (duplicating) Trial by Dirt 12 times instantly completes all 12 levels</b>, with a fairly high risk of the game crashing unfortunately.</li>
-  <li>For Taxi Driver, the "fare" dropped off in this <b>massively duped version of Taxi Driver will give you as many "taxi fares" as you had running instances of Trial By Dirt before starting Taxi Driver</b>. The destination right off the bat is in fact the one of most recent fare picked up due to a side effect of starting Taxi Driver with Trial By Dirt, so <b>a <a target="_blank" href="https://www.speedrun.com/gtavc/thread/8bp2n/1#wqhvg" style="color: #A8DFFF">suitable Downtown destination</a> is set up during Sunshine Autos cars collection, and used to drop off a close fare without picking anyone up</b>. This is split up into two segments of 50 dupes each, because duping it over ~63 times crashes the game. It saves 40-50 minutes over regular duped Taxi Driver and removes a huge RNG element from the run.</li>
+  <li>For Taxi Driver, the "fare" dropped off in this <b>massively duped version of Taxi Driver will give you as many "taxi fares" as you had running instances of Trial By Dirt before starting Taxi Driver</b>. The destination right off the bat is in fact the one of most recent fare picked up due to a side effect of starting Taxi Driver with Trial By Dirt, so <b>a <a target="_blank" href="https://www.speedrun.com/gtavc/thread/8bp2n/1#wqhvg">suitable Downtown destination</a> is set up during Sunshine Autos cars collection, and used to drop off a close fare without picking anyone up</b>. This is split up into two segments of 50 dupes each, because duping it over ~63 times crashes the game. It saves 40-50 minutes over regular duped Taxi Driver and removes a huge RNG element from the run.</li>
 </ul>
   Why this works: basically, by playing a saved replay from beyond 2 minutes in "the future", the game will think you've failed a rampage by "running out of time".<br><br>
   This lets you start Trial by Dirt over and over. When you cancel the rampage, Trial by Dirt will restart, but the rampage must be re-activated extremely quickly, otherwise there is the risk of the mission starting on its own without the rampage and preventing the "duping" streak from continuing. This is why the keypresses are the way they are for this, and why there's a 5+ minute waiting period before this: to obtain a replay sufficiently far in the future that the whole segment, with its usage of rampage instant-fails, can be completed.</p>
