--- a/vc-faq.html
+++ b/vc-faq.html
@@ -1,31 +1,15 @@
 <html>
-<style>
-body {
-  background-color: black;
-  color: white;
-  max-width: 700px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 2%;
-  padding-right: 2%;
-  font-size: 15px;
-  font-family: Helvetica;
-}
-</style>
-
 <title>Vice City General Speedrun FAQ</title>
-<nav>
-<ul style="background-color: white; list-style-type: none;">
-<li style="display: inline; padding-right: 25px;"><a href="index.html">Home</a></li>
-<li style="display: inline; padding-right: 25px;"><a href="vc-faq.html">VC General Speedrun FAQ</a></li>
-<li style="display: inline; padding-right: 25px;"><a href="vc-faq-100.html">VC 100% Speedrun FAQ</a></li>
-<li style="display: inline; padding-right: 25px;"><a href="snow-tl.html">SNOW Translation Project</a></li>
+<link href="style.css" rel="stylesheet" type="text/css" />
+
+<nav><ul class="navlist">
+<li class="navitem"><a href="index.html">Home</a></li>
+<li class="navitem"><a href="vc-faq.html">VC General Speedrun FAQ</a></li>
+<li class="navitem"><a href="vc-faq-100.html">VC 100% Speedrun FAQ</a></li>
+<li class="navitem"><a href="snow-tl.html">SNOW Translation Project</a></li>
 </ul></nav>
+
 <body>
-
-
-
-
 <h1>Vice City General Speedrun FAQ</h1>
 
 <b>Q: What's all this "onmission" stuff about?</b>
@@ -40,7 +24,7 @@ You can technically use the Australian version for No SSU since Ammu-Nation isn'
 <b>Q: OK, but what's an instapass?</b>
 <p>A: It's shorthand for instant pass (<b>further abbreviated to "IP"</b>), i.e. instantly completing a mission by starting it while on a certain part of another mission.<br><br>
   For example, if you start Distribution while on the first part of Hit the Courier <b>om0</b> (on the Japanese version), it will instantly pass Distribution.<br><br>
-  It just so happens that the part of Hit the Courier's mission script before you obtain the plates has about the same offset into the mission code as the mission pass section for Distribution on the Japanese version, and for some reason starting another mission carries over the first mission's script offset. Thereby which it is "instapassed". (<a target="_blank" href="https://cdn.discordapp.com/attachments/908364377021886524/917919389813190666/unknown.png" style="color: #A8DFFF">Here's a visual example courtesy of Patrick</a>)<br><br>
+  It just so happens that the part of Hit the Courier's mission script before you obtain the plates has about the same offset into the mission code as the mission pass section for Distribution on the Japanese version, and for some reason starting another mission carries over the first mission's script offset. Thereby which it is "instapassed". (<a target="_blank" href="https://cdn.discordapp.com/attachments/908364377021886524/917919389813190666/unknown.png">Here's a visual example courtesy of Patrick</a>)<br><br>
  
 There are quite a few different instapasses, many of which can be observed in All Missions and 100% runs.<br>
 A non-exhaustive list of the instapasses you may see (many are 'Japanese-exclusive'):<br>
