removed border from personal links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <p>Yo, I'm some nerd from the Baltimore/DC 'burbs (though I'd rather be in Philly). I speedrun GTA Vice City and translate stuff Japanese-English. And also some other miscellanous nerdy things.<br>
 I'm probably gonna continue building this site up to become my own hub of sorts.</p>
-<nav>
+<nav style="border-style: none;">
 <ul class="navlist">
 <li class="navitem"><a target="_blank" href="https://twitch.tv/mhmd_fvc">Twitch</a></li>
 <li class="navitem"><a target="_blank" href="https://youtube.com/107989055567">YouTube</a></li>
