--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 </ul></nav>
 
 <body>
-<p>Yo, I'm some nerd from the Baltimore/DC 'burbs (though I'd rather be in Philly). I speedrun GTA Vice City and translate stuff Japanese-English. And also some other miscellanous nerdy things.<br>
-I'm probably gonna continue building this site up to become my own hub of sorts.</p>
+<p>Yo, I'm some nerd from the Baltimore/DC 'burbs (though I'd rather be elsewhere). I speedrun GTA Vice City, make the occasional mod, and do other miscellanous nerdy things.</p>
 <nav style="border-style: none;">
 <ul class="navlist">
 <li class="navitem"><a target="_blank" href="https://twitch.tv/mhmd_fvc">Twitch</a></li>
