back to normal, guess I gotta copypaste the navbar everywhere...

--- a/fr.html
+++ b/fr.html
@@ -1,7 +1,13 @@
 <html>
 <title>FR FAQ</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
-<?php include_once "navbar.html" ?>
+<nav style="max-width:400px; margin-left:auto; margin-right:auto;">
+<ul class="navlist">
+<li class="navitem"><a href="index.html">Home</a></li>
+<li class="navitem"><a href="faqs.html">FAQs</a></li>
+<li class="navitem"><a href="mods.html">Mods</a></li>
+<li class="navitem"><a href="snow-tl.html">SNOW Translation Project</a></li>
+</ul></nav>
 
 <body>
 <h1>Forelli Redemption FAQ</h1>
