didn't like the % in drunk%

--- a/mods.html
+++ b/mods.html
@@ -19,7 +19,7 @@
 <h3>Other Mods (for preservation)</h3>
 <nav style="border-style: none;"><ul>
 <li><a href="/mods/ohko_vc.exe">Vice City - One-Hit KO</a></li>
-<li><a href="/mods/Drunk%.exe">Vice City - Drunk Camera</a></li>
+<li><a href="/mods/Drunk.exe">Vice City - Drunk Camera</a></li>
 <li><a href="/mods/MAIN.SCM (100 new package locations)">Vice City - 100 moved packages</a> (remove part after SCM and replace in data folder)</li>
 </ul></nav>
 
