--- a/fr.html
+++ b/fr.html
@@ -18,7 +18,7 @@
 <p>A: Yes, I'm going for 100%.</p>
 <br>
 <b>Q: Will you play other total conversion mods?</b>
-<p>A: I'm looking at GTA III Frosted Winter and GTAVC Shine o' Vice as ones that I've been meaning to get around to for some time. Might even be interesting to work on a new one...</p>
+<p>A: I'm looking at GTA III Frosted Winter and GTAVC Shine o' Vice as ones that I've been meaning to get around to for some time.</p>
 <br>
 <b>Q: Will you speedrun this?</b>
 <p>A: ... Maybe. Doing a 100% run of this could be interesting. At least Paramedic and Taxi are cut in half, too (though no Taxi duping). But I'm not exactly a GTA III 100% expert, so it wouldn't be anything too amazing I guess.</p>
