added godmode, edited snow tl page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </ul></nav>
 
 <body>
-<p>Yo, I'm some nerd from the Baltimore/DC 'burbs (though I'd rather be elsewhere). I speedrun GTA Vice City, make the occasional mod, and do other miscellanous nerdy things.</p>
+<p>Yo, I'm some nerd from Howard County, MD. I speedrun GTA Vice City, make the occasional mod, and do other miscellanous nerdy things.</p>
 <nav style="border-style: none;">
 <ul class="navlist">
 <li class="navitem"><a target="_blank" href="https://twitch.tv/mhmd_fvc">Twitch</a></li>
