--- a/snow-tl.html
+++ b/snow-tl.html
@@ -12,7 +12,7 @@
 <body>
 <h1>SNOW Translation Project</h1>
 <a target="_blank" href="https://vndb.org/v893"><img src="https://s2.vndb.org/sf/52/27752.jpg" width="400px" height="300px"></a>
-<h2><a href="SNOWPE_en_sumino_asahi.7z">DOWNLOAD CURRENT PATCH</a></h2>
+<h2><a href="SNOWPE_en_sumino_asahi.7z">DOWNLOAD DEMO (first two routes)</a></h2>
 <h2><a href="magnet:?xt=urn:btih:03831cacc64eca39c991d13183ce3109c31aa276&dn=SNOW%20-Plus%20Edition-">DOWNLOAD SNOW PE</a></h2>
 <h2><a target="_blank" href="https://twitter.com/snowyryujintl">TWITTER</a></h2>
 <p>SNOW is a visual novel released in 2004, with various editions released afterwards. It was developed by Studio Mebius, which I'm not even sure still exists (more than just legally, anyhow).
@@ -21,6 +21,6 @@ There is another version of SNOW named the "Standard Edition" which is PE plus a
 This, plus the fact that I couldn't even get it technically working with the patchwork of ancient tools supporting this visual novel's engine, are why PE is being used.<br><br>
 It was only released in Japanese obviously, which is why there is a fan-driven effort to translate it into English.<br><br>
 I'm one of the translators and the one who got the ball rolling on this project. Rinny is the "manager" in a sense, Takafumi is doing image editing, Tsukishiro is another translator, and waffletown is editing the transations.<br><br>
-This is a massive VN with over 60,000 lines of text, and we are not a big team and we have our own lives, but progress is looking good. It might even be done by summer 2022...
+This is a massive VN with over 60,000 lines of text, and we are not a big team and we have our own lives, but the translation is almost complete. It will likely be released in summer 2022.
 </body>
 </html>
