--- a/fr.html
+++ b/fr.html
@@ -1,11 +1,11 @@
 <html>
 <title>FR FAQ</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
-<nav style="max-width:400px; margin-left:auto; margin-right:auto;">
+<nav style="max-width:450px; margin-left:auto; margin-right:auto;">
 <ul class="navlist">
 <li class="navitem"><a href="index.html">Home</a></li>
 <li class="navitem"><a href="faqs.html">FAQs</a></li>
-<li class="navitem"><a href="mods.html">Mods</a></li>
+<li class="navitem"><a href="vc.html">Vice City Stuff</a></li>
 <li class="navitem"><a href="snow-tl.html">SNOW Translation Project</a></li>
 </ul></nav>
 
