--- a/vc.html
+++ b/vc.html
@@ -12,14 +12,14 @@
 <body>
 <h3>My Mods</h3>
 <nav style="border-style: none;"><ul>
-<li><a href="https://github.com/MhmdFVC/GTARadioPlayer" title="Controls your external music player as if it's GTA radio">GTA Radio Player</a></li>
+<li><a href="https://github.com/MhmdFVC/GTARadioPlayer" target="_blank" title="Controls your external music player as if it's GTA radio">GTA Radio Player</a></li>
 <li><a href="/mods/Moved-USJs-intl.zip">36 Moved Unique Stunts</a> (extract to game directory)</li>
 <li><a href="/mods/VC_practice.scm">Speedrun Practice SCM</a> (rename to main.scm and replace in data folder)</li>
 </ul></nav>
 
 <h3>Other Mods (for preservation)</h3>
 <nav style="border-style: none;"><ul>
-<li><a href="/mods/Chaos%.zip">Chaos% by Lighnat0r</a> (<a href="https://github.com/Lighnat0r-pers/gta-vc-chaos">Github</a>)</li>
+<li><a href="/mods/Chaos.zip">Chaos% by Lighnat0r</a> (<a href="https://github.com/Lighnat0r-pers/gta-vc-chaos" target="_blank">Github</a>)</li>
 <li><a href="/mods/GTA Long Night.zip">GTA Long Night</a></li>
 <li><a href="/mods/Winter Mod.zip">Winter Mod</a></li>
 <li><a href="/mods/ohko_vc.exe">One-Hit KO</a></li>
@@ -31,7 +31,7 @@
 <nav style="border-style: none;"><ul>
 <li><a href="/vc-tools/GodMode.ahk" title="Applies 'godbike' physics to your current vehicle">GodMode AHK script by YBurakD</a></li>
 <li><a href="/vc-tools/KYFC spawner.ahk" title="Uses hotkeys (default F4/F5) to allow Lance/Sonny to spawn instantly on KYFC respectively">KYFC Spawner AHK script</a></li>
-<li><a href="/vc-tools/100% Checklist.zip" title="Live checklist that hooks into your game">100% Checklist by Lighnat0r</a> (<a href="https://github.com/Lighnat0r-pers/100pc_checklist">Github</a>)</li>
+<li><a href="/vc-tools/100 Checklist.zip" title="Live checklist that hooks into your game">100% Checklist by Lighnat0r</a> (<a href="https://github.com/Lighnat0r-pers/100pc_checklist" target="_blank">Github</a>)</li>
 <li><a href="/vc-tools/AudioDecoder.exe">Audio Decoder</a></li>
 <li><a href="/vc-tools/Fare Counter.exe">Fare Counter</a></li>
 <li><a href="/vc-tools/GTAOnMissionChanger.exe">$ONMISSION changer</a></li>
@@ -41,7 +41,7 @@
 <li><a href="/vc-tools/No Mouse Sensitivity Reset.exe">No Mouse Sensitivity Reset</a></li>
 <li><a href="/vc-tools/Quicksave.exe">Quicksave by Lighnat0r</a></li>
 <li><a href="/vc-tools/vc_set_fix.jar" title="Fixes the settings file so that you can run the international version after having launched the JP version. Run in your User Files folder.">.set fix by Ethan</a></li>
-<li><a href="/vc-tools/VCsaveConvert.exe" title="Converts saves between retail and Steam formats. Does not support JP conversions unfortunately.">Save Converter</a></li>
+<li><a href="/vc-tools/VCsaveConvert.exe" title="Converts saves between retail and Steam formats. Does not support JP conversions unfortunately. Use by dragging a save onto the exe.">Save Converter</a></li>
 <li><a href="/vc-tools/sg_editor.exe">Savegame Editor</a></li>
 <li><a href="/vc-tools/Super SSA Checklist 2.exe">Super SSA Checklist by Lighnat0r</a></li>
 </ul></nav>
