--- a/snow-tl.html
+++ b/snow-tl.html
@@ -11,7 +11,7 @@
 
 <body>
 <h1>SNOW Translation Project</h1>
-<a target="_blank" href="https://vndb.org/v893"><img src="https://pbs.twimg.com/media/FPTIukPVsAIX5QI?format=jpg" width="400px" height="300px"></a>
+<a target="_blank" href="https://vndb.org/v893"><img src="buns.jpg" width="400px" height="300px"></a>
 <h2><a href="SNOWPE_en_sumino_asahi.7z">DOWNLOAD DEMO (first two routes)</a></h2>
 <h2><a href="magnet:?xt=urn:btih:03831cacc64eca39c991d13183ce3109c31aa276&dn=SNOW%20-Plus%20Edition-">DOWNLOAD SNOW PE</a></h2>
 <h2><a target="_blank" href="https://twitter.com/snowyryujintl">TWITTER</a></h2>
