Snow page updates

--- a/snow-tl.html
+++ b/snow-tl.html
@@ -15,15 +15,14 @@
 <h2><a href="SNOWPE_en_patch.zip">DOWNLOAD ENGLISH PATCH</a></h2>
 <h2><a href="magnet:?xt=urn:btih:03831cacc64eca39c991d13183ce3109c31aa276&dn=SNOW%20-Plus%20Edition-">DOWNLOAD SNOW PE</a></h2>
 <h2><a target="_blank" href="https://twitter.com/snowyryujintl">TWITTER</a></h2>
-<p><b>The project is now fully complete! We hope you enjoy the finished project!</b></p>
+<p><h2>The project is now fully complete! We hope you enjoy the finished project!</h2></p>
 <p>SNOW is a visual novel released in 2004, with various editions released afterwards. It was developed by Studio Mebius, which I'm not even sure still exists (more than just legally, anyhow).
 This project is based on the "Plus Edition" (PE) released in 2006, supporting a whopping 800x600 resolution and with two new routes introduced in the various console releases.<br><br>
 There is another version of SNOW named the "Standard Edition" which is PE plus additional fandisc content, with quite horrifying contents in my opinion.
 This, plus the fact that I couldn't even get it technically working with the patchwork of ancient tools supporting this visual novel's engine, are why PE is being used.<br><br>
 It was only released in Japanese obviously, which is why there is a fan-driven effort to translate it into English.<br><br>
 I'm one of the translators and the one who got the ball rolling on this project. Rinny is the "manager" in a sense, Takafumi is doing image editing, Tsukishiro is another translator, and waffletown is editing the transations.<br><br>
-<p></p>
-<p></p>
+<br><br><br><br><br><br><br><br><br><br>
 <p>Psst... hey! You want to see what some of the console version voice lines sound like? Well, you're in luck because I started off a PS2 voices mod back when the project was first in its early stages! It's only the first few days' worth of dialogue, but check it out if you'd like.</p>
 <h4><a href="PS2_voices_mod_demo.zip">DOWNLOAD PS2 VOICES MOD DEMO</a></h4>
 (To install, copy all the files into the KOE folder, then backup and remove all the existing .nwk files with the same names as the new .ovk files.)
