--- a/vc-faq-100.html
+++ b/vc-faq-100.html
@@ -17,19 +17,22 @@
 <p>A: I get it later when it's slightly faster, safer, or doesn't make a difference.</p>
 <br>
 <b>Q: Why are you looking at the store owners?</b>
-<p>A: Since Tommy doesn't actually point the gun at them using standard controls on the PC version, you just have to look at them in a certain way at a certain distance with a non-melee weapon in hand and it'll work. Plus, <b>all 15 store robberies are required for 100% completion</b>.</p>
+<p>A: To do the store knockoffs, Tommy doesn't actually point the gun at them using standard controls on the PC version, so you just have to look at them in a certain way at a certain distance with a non-melee weapon in hand and it'll work. Plus, <b>all 15 store robberies are required for 100% completion</b>.</p>
 <br>
 <b>Q: Why do you shoot the store owners?</b>
-<p>A: This prevents them from setting off the alarm and making me get 2 stars. In some instances, it doesn't matter or is even advantageous to get 2 stars though, so I don't shoot them in those instances.</p>
+<p>A: One-shotting them with a hitscan weapon (i.e. any gun that isn't a sniper rifle) prevents them from setting off the alarm and making me get 2 stars. In some instances, it doesn't matter or is even advantageous to get 2 stars though, so I don't shoot them in those instances.</p>
 <br>
 <b>Q: Why aren't you taking the heli on G-Spotlight?</b>
 <p>A: Three unique stunts, required for 100%, are done on these buildings.</p>
 <br>
 <b>Q: [SSA Instadeliveries] What the hell is going on?</b>
-<p>A: I started Loose Ends with an om0 call, took the phone call and killed certain people, then started it a second time (i.e. duped it).<br><br>
-Since this mission has such an absurd amount of NPCs, it starts messing with the game's memory and actually manages to screw up the Sunshine Autos car lists a little. This is abused to instantly complete the lists, but unfortunately it only does the bottom half of the lists for some reason, so I still collect the cars of the top halves earlier on in the run.<br><br>
-As for why I kill those specific people in the first mission instance, it's because having too many of them makes it so even if I deliver some cars, they sometimes don't even count. It's quite finicky, and you need the perfect balance of NPCs for it to go smoothly.<br><br>
-Also, since it is dependent on NPC spawns, the street pedestrian/gang spawns are mandatory as well. If it is raining or nighttime, it will not go very smoothly either, so I make an effort to set the time to late morning with clear weather before doing this strat.</p>
+<p>A: I started Loose Ends with an om0 call, took the phone call and killed a certain number of people in certain locations, then started it a second time (i.e. duped it).</p>
+
+<p>Since this mission has such an absurd amount of NPCs, it starts messing with the game's memory and actually manages to screw up the Sunshine Autos car lists a little. This is abused to instantly complete the lists, but it only does the bottom half of the lists for some reason, so I still collect the cars of the top halves earlier on in the run.</p>
+
+<p>As for why I kill those specific people in the first mission instance, it's because having too many of them makes it so even if I deliver some cars, they sometimes don't even count. It's quite finicky, and you need the perfect balance of NPCs for it to go smoothly.</p>
+
+<p>Also, since it is dependent on NPC spawns, the street pedestrian/gang spawns are mandatory as well. If it is raining or nighttime, it will not go very smoothly either, so I make an effort to set the time to late morning with clear weather before doing this strat.</p>
 <br>
 <b>Q: [Trial by Dirt duping] What the hell are you doing?</b>
 <p>A: This involves starting the Trial by Dirt off-road mission many times with rampages, and then starting Vigilante or Taxi Driver.
