General polish on homepage and Snow page

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 </ul></nav>
 
 <body>
-<p>Yo, I'm some nerd from Howard County, MD. I speedrun GTA Vice City, make the occasional mod, and do other miscellanous nerdy things.</p>
+<h3>Mhmd's Site</h3>
+<p>Greetings, and welcome to my humble repository of knowledge. Here you will find my speedrun (and other) FAQs, Vice City mod and tool archives, and info and downloads for the Snow PE translation project.</p>
 <nav style="border-style: none;">
 <ul class="navlist">
 <li class="navitem"><a target="_blank" href="https://twitch.tv/mhmd_fvc">Twitch</a></li>
 <li class="navitem"><a target="_blank" href="https://youtube.com/107989055567">YouTube</a></li>
 <li class="navitem"><a target="_blank" href="https://twitter.com/srlmhmd">Twitter</a></li>
+<li class="navitem"><a target="_blank" href="https://github.com/MhmdFVC">GitHub</a></li>
 </ul></nav>
 
 </body>
