Added site name to all page titles

--- a/snow-tl.html
+++ b/snow-tl.html
@@ -1,5 +1,5 @@
 <html>
-<title>SNOW Translation Project</title>
+<title>Mhmd's Site - SNOW Translation Project</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <nav style="max-width:450px; margin-left:auto; margin-right:auto;">
 <ul class="navlist">
