--- a/vc-faq-100.html
+++ b/vc-faq-100.html
@@ -1,5 +1,5 @@
 <html>
-<title>Vice City 100% Speedrun FAQ</title>
+<title>Mhmd's Site - Vice City 100% Speedrun FAQ</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <nav style="max-width:450px; margin-left:auto; margin-right:auto;">
 <ul class="navlist">
