--- a/faqs.html
+++ b/faqs.html
@@ -1,5 +1,5 @@
 <html>
-<title>FAQs</title>
+<title>Mhmd's Site - FAQs</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <nav style="max-width:450px; margin-left:auto; margin-right:auto;">
 <ul class="navlist">
