--- a/fr.html
+++ b/fr.html
@@ -1,5 +1,5 @@
 <html>
-<title>FR FAQ</title>
+<title>Mhmd's Site - Forelli Redemption FAQ</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <nav style="max-width:450px; margin-left:auto; margin-right:auto;">
 <ul class="navlist">
