--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Homepage</title>
+<title>Mhmd's Site - Homepage</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <nav style="max-width:450px; margin-left:auto; margin-right:auto;">
 <ul class="navlist">
