--- a/vc.html
+++ b/vc.html
@@ -1,5 +1,5 @@
 <html>
-<title>Mods</title>
+<title>Mhmd's Site - Vice City Mods and Tools</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <nav style="max-width:450px; margin-left:auto; margin-right:auto;">
 <ul class="navlist">
