--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <li class="navitem">Home</li>
     <li class="navitem"><a href="vc/vc.html">Vice City Stuff</a></li>
     <li class="navitem"><a href="blog/blog.html">Blog</a></li>
-    <li class="navitem"><a href="snow-tl/snow-tl.html">SNOW Translation Project</a></li>
+    <li class="navitem"><a href="tl/tl.html">VN Translations</a></li>
 </ul></nav>
 
 <body>
