--- a/vc/vc.html
+++ b/vc/vc.html
@@ -5,7 +5,7 @@
     <li class="navitem"><a href="../index.html">Home</a></li>
     <li class="navitem">Vice City Stuff</li>
     <li class="navitem"><a href="../blog/blog.html">Blog</a></li>
-    <li class="navitem"><a href="../snow-tl/snow-tl.html">SNOW Translation Project</a></li>
+    <li class="navitem"><a href="../tl/tl.html">VN Translations</a></li>
 </ul></nav>
 
 
