--- a/tl/tl.html
+++ b/tl/tl.html
@@ -1,6 +1,17 @@
 <html>
 <title>Mhmd's Site - SNOW Translation Project</title>
 <link href="../style.css" rel="stylesheet" type="text/css" />
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0TCV0Q2WZD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0TCV0Q2WZD');
+</script>
+
 <nav class="navbar"><ul class="navlist">
     <li class="navitem"><a href="../index.html">Home</a></li>
     <li class="navitem"><a href="../vc/vc.html">Vice City Stuff</a></li>
