--- a/vc/faq-fr.html
+++ b/vc/faq-fr.html
@@ -2,6 +2,16 @@
 <title>Mhmd's Site - Forelli Redemption FAQ</title>
 <link href="../style.css" rel="stylesheet" type="text/css" />
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0TCV0Q2WZD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0TCV0Q2WZD');
+</script>
+
 <body>
 <h1>Forelli Redemption FAQ</h1>
 <b>Q: What is this?</b>
