--- a/vc/vc.html
+++ b/vc/vc.html
@@ -1,13 +1,23 @@
 <html>
 <title>Mhmd's Site - Vice City Mods and Tools</title>
 <link href="../style.css" rel="stylesheet" type="text/css" />
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0TCV0Q2WZD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0TCV0Q2WZD');
+</script>
+
 <nav class="navbar"><ul class="navlist">
     <li class="navitem"><a href="../index.html">Home</a></li>
     <li class="navitem">Vice City Stuff</li>
     <li class="navitem"><a href="../blog/blog.html">Blog</a></li>
     <li class="navitem"><a href="../tl/tl.html">VN Translations</a></li>
 </ul></nav>
-
 
 <body>
 <h3>FAQs</h3>
