--- a/vc/faq-100.html
+++ b/vc/faq-100.html
@@ -2,6 +2,16 @@
 <title>Mhmd's Site - Vice City 100% Speedrun FAQ</title>
 <link href="../style.css" rel="stylesheet" type="text/css" />
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0TCV0Q2WZD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0TCV0Q2WZD');
+</script>
+
 <body>
 <h1>Vice City 100% Speedrun FAQ</h1>
 <b>(You may need to refer to the General FAQ if you are unfamiliar with Vice City speedruns.)</b><br><br>
