Android/VC pages update

--- a/vc/vc.html
+++ b/vc/vc.html
@@ -20,6 +20,7 @@
 </ul></nav>
 
 <body>
+<h3><a href="android/android.html">Android version page</a></h3>
 <h3>FAQs</h3>
 <nav style="border-style: none;"><ul>
     <li><a href="faq-general.html">Vice City General Speedrunning</a></li>
