--- a/vc/android/android.html
+++ b/vc/android/android.html
@@ -17,7 +17,7 @@
 </ul></nav>
 
 <body>
-<h2><a href="https://mega.nz/file/Q8NWUS5B#m8xE7kaMEXG1zd2QrclVnhK1dv8wsuEKg759vuQMzPw">Download the game data here</a></h2> <a href="https://dwdisc.com/fdl/9bbeea01-875c-42c5-9244-0049875a9c8c/2431-Grand-Theft-Auto-Vice-City-v1-10-cache1.zip">(mirror)</a><br><br>
+<h2><a href="https://mega.nz/file/Q8NWUS5B#m8xE7kaMEXG1zd2QrclVnhK1dv8wsuEKg759vuQMzPw">Download the game data here</a></h2> <a href="https://dwdisc.com/dwd9e3d456/download.html">(mirror)</a><br><br>
 Extract it so that your folder structure looks like:<br>
 /Android/obb/com.rockstargames.gtavc/main.11.com.rockstargames.gtavc.obb
 
