--- a/tl/tl.html
+++ b/tl/tl.html
@@ -21,10 +21,15 @@
 
 <body>
     <h1>planetarian snow globe Translation Project</h1>
-    <p>More info coming soon. The full mod is pretty much done and is just waiting a final look-over by Mr. Rinny. (2023-07-11)</p>
+    <a target="_blank" href="https://vndb.org/v27747"><img src="marriage.jpg" width="400px" height="300px" alt="Yumemi asking Satomi a question in English." title="Yumemi asking Satomi a question in English."></a>
+    <br><br>(<a target="_blank" href="https://vndb.org/v27747">VNDB Link</a>)<br>
+    <p>Out now! (2023-08-09)</p>
+    <h2><a href="snow-globe-en.zip">DOWNLOAD SNOW GLOBE ENGLISH PATCH</a></h2>
+    <h2><a target="_blank" href="https://www.dlsite.com/soft/work/=/product_id/VJ014687.html" >BUY SNOW GLOBE</a></h2>
+    <br><br><br><br>
     <h1>SNOW Translation Project</h1>
         <a target="_blank" href="https://vndb.org/v893"><img src="buns.jpg" width="400px" height="300px" alt="Sumino and Meiko enjoying some manju in English." title="Sumino and Meiko enjoying some manju in English."></a>
-        <br><br>(<a href="https://vndb.org/v893">VNDB Link</a>)<br>
+        <br><br>(<a target="_blank" href="https://vndb.org/v893">VNDB Link</a>)<br>
         <p><h2>The project is now fully complete! We hope you enjoy the finished project!</h2></p>
 
         <h2><a href="SNOWPE_en_patch.zip">DOWNLOAD ENGLISH PATCH</a></h2>
